--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "vite": "^6.2.0",
         "vue": "^3.5.13",
         "vue-chartjs": "^5.3.2",
+        "vue-color": "^3.0.1",
         "ziggy-js": "^2.4.2",
         "zod": "^3.24.3"
     },
