--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@types/node": "^22.13.5",
+        "@types/vuedraggable": "^2.23.2",
         "@vue/eslint-config-typescript": "^14.3.0",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
@@ -45,6 +46,7 @@
         "vue": "^3.5.13",
         "vue-chartjs": "^5.3.2",
         "vue-color": "^3.0.1",
+        "vuedraggable": "^4.1.0",
         "ziggy-js": "^2.4.2",
         "zod": "^3.24.3"
     },
