--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
         "laravel-vite-plugin": "^1.0",
         "lucide": "^0.468.0",
         "lucide-vue-next": "^0.468.0",
-        "reka-ui": "^2.2.1",
+        "reka-ui": "^2.3.1",
         "swiper": "^11.2.6",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
         "typescript": "^5.2.2",
+        "vaul-vue": "^0.4.1",
         "vee-validate": "^4.15.0",
         "vite": "^6.2.0",
         "vue": "^3.5.13",
