--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "@tiptap/pm": "^2.12.0",
         "@tiptap/starter-kit": "^2.12.0",
         "@tiptap/vue-3": "^2.12.0",
+        "@unovis/ts": "^1.5.2",
+        "@unovis/vue": "^1.5.2",
         "@vee-validate/zod": "^4.15.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
@@ -45,7 +47,7 @@
         "lucide": "^0.468.0",
         "lucide-vue-next": "^0.468.0",
         "pinia": "^3.0.3",
-        "reka-ui": "^2.3.1",
+        "reka-ui": "^2.3.2",
         "swiper": "^11.2.6",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
