--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       SSH_USER: ${{ secrets.SSH_USER }}
       SSH_PORT: 22
       SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-      APP_DIR: /var/www/workspace
+      APP_DIR: /var/www/workspaces
 
     steps:
       - name: Checkout code
