--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,39 +7,25 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest # Or your desired runner
-    environment: production # Use GitHub Environments for secrets and deployments
+    runs-on: ubuntu-latest
+    environment: production
     env:
-      SSH_HOST: ${{ secrets.SSH_HOST }}
-      SSH_USER: ${{ secrets.SSH_USER }}
-      SSH_PORT: 22
-      SSH_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-      APP_DIR: /var/www/workspaces
+      APP_DIR: /var/www/workspaces 
+
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # (Optional) If your server doesn't have Node/NPM/Composer already
-      # - name: Setup Node.js
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: '18' # Or your desired Node.js version
-      # - name: Setup PHP
-      #   uses: shivammathur/setup-php@v2
-      #   with:
-      #     php-version: '8.2' # Or your desired PHP version
-      #     extensions: mbstring, pdo_mysql, zip # Common extensions
-
       - name: Deploy to Server
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ env.SSH_HOST }}
-          username: ${{ env.SSH_USER }}
-          key: ${{ env.SSH_KEY }}
-          port: ${{ env.SSH_PORT }}
+          host: ${{ secrets.SSH_HOST }}      
+          username: ${{ secrets.SSH_USER }}  
+          key: ${{ secrets.SSH_PRIVATE_KEY }} 
+          port: ${{ secrets.SSH_PORT }}                              
           script: |
-            cd ${{ env.APP_DIR }}
+            cd ${{ env.APP_DIR }} # APP_DIR can remain in env if your script needs it
 
             # Ensure the deploy.sh script is executable on the server
             # (You might want to commit it with +x or chmod it during setup)
