--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@vee-validate/zod": "^4.15.0",
         "@vitejs/plugin-vue": "^5.2.1",
         "@vueuse/core": "^12.8.2",
+        "apexcharts": "^5.3.6",
         "chart.js": "^4.4.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -45,7 +46,7 @@
         "lucide": "^0.468.0",
         "lucide-vue-next": "^0.468.0",
         "pinia": "^3.0.3",
-        "reka-ui": "^2.6.1",
+        "reka-ui": "^2.7.0",
         "swiper": "^11.2.6",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
@@ -57,6 +58,7 @@
         "vue": "^3.5.13",
         "vue-chartjs": "^5.3.2",
         "vue-color": "^3.0.1",
+        "vue3-apexcharts": "^1.10.0",
         "vuedraggable": "^4.1.0",
         "ziggy-js": "^2.4.2",
         "zod": "^3.24.3"
