--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
+        "@laravel/vite-plugin-wayfinder": "^0.1.7",
         "@types/node": "^22.13.5",
         "@types/vuedraggable": "^2.23.2",
         "@vue/eslint-config-typescript": "^14.3.0",
@@ -24,7 +25,7 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
-        "@inertiajs/vue3": "^2.0.0-beta.3",
+        "@inertiajs/vue3": "^2.3.11",
         "@tailwindcss/vite": "^4.1.1",
         "@tanstack/vue-table": "^8.21.3",
         "@tiptap/extension-image": "^2.12.0",
