--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "laravel/wayfinder": "^0.1.13",
+        "sentry/sentry-laravel": "^4.20",
         "spatie/laravel-permission": "^6.24",
         "tightenco/ziggy": "^2.4"
     },
