--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "lucide-vue-next": "^0.468.0",
         "pinia": "^3.0.3",
         "reka-ui": "^2.7.0",
-        "swiper": "^11.2.6",
+        "swiper": "^12.1.2",
         "tailwind-merge": "^3.2.0",
         "tailwindcss": "^4.1.1",
         "tw-animate-css": "^1.2.5",
@@ -68,5 +68,8 @@
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
         "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
         "lightningcss-linux-x64-gnu": "^1.29.1"
+    },
+    "overrides": {
+        "minimatch": "^10.2.1"
     }
 }
